# hermes-mesh

./: .gitignore  PRODUCT_VISION.md  README.md  SKILL.md  pyproject.toml
dashboard/: radar.html
hermes_mesh/: __init__.py  api.py  cli.py  config.py  discovery.py  heartbeat.py
scripts/: mesh-daemon.py  mesh-handshake-watcher.py
