[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-mesh"
version = "0.1.0"
description = "Hermes Mesh — agent discovery, heartbeat, and task delegation mesh network"
readme = "PRODUCT_VISION.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "zeroconf>=0.136.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
hermes-mesh = "hermes_mesh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hermes_mesh"]

[tool.ruff]
line-length = 100
target-version = "py310"
